--- a/addons/mrp/views/mrp_workorder_views.xml
+++ b/addons/mrp/views/mrp_workorder_views.xml
@@ -169,7 +169,7 @@
                 </group>
                 <group>
                     <group invisible="not date_start">
-                        <label for="date_start" string="Scheduled Date" invisible="state in ['progress', 'done', 'cancel']"/>
+                        <label for="date_start" string="Scheduled Date kinho" invisible="state in ['progress', 'done', 'cancel']"/>
                         <label for="date_start" string="Start Date" invisible="state not in ['progress', 'done', 'cancel']"/>
                         <div class="oe_inline">
                             <field name="is_planned" invisible="1"/>
