--- a/addons/l10n_ar_withholding/views/account_payment_view.xml
+++ b/addons/l10n_ar_withholding/views/account_payment_view.xml
@@ -3,20 +3,22 @@
     <record id="view_account_payment_form" model="ir.ui.view">
         <field name="name">account.payment.form.inherited</field>
         <field name="model">account.payment</field>
-        <field name="inherit_id" ref="account.view_account_payment_form" />
+        <field name="inherit_id" ref="l10n_latam_check.view_account_payment_form_inherited" />
         <field name="arch" type="xml">
-            <group position="inside">
-                <group name="group4" colspan="2" invisible="country_code != 'AR'">
-                    <field name="l10n_ar_withholding_ids" nolabel="1" colspan="2"
-                        readonly="True" invisible="is_internal_transfer">
-                        <tree>
-                            <field name="move_name" column_invisible="True"/>
-                            <field name="tax_line_id" string="Tax"/>
-                            <field name="name" string="Withholding Number" required="1"/>
-                            <field name="amount_currency" readonly="0" required="1" string="Amount" sum="Total"/>
-                        </tree>
-                    </field>
-                </group>
+            <group name="latam_checks" position="replace">
+                <notebook>
+                    <page name="latam_checks_page" string="Checks" invisible="payment_method_code not in ['in_third_party_checks', 'out_third_party_checks', 'new_third_party_checks', 'own_checks']">$0</page>
+                    <page name="withholdings_page" string="Withholdings" invisible="is_internal_transfer or country_code != 'AR'">
+                        <field name="l10n_ar_withholding_ids" nolabel="1" colspan="2" readonly="True">
+                            <tree>
+                                <field name="move_name" column_invisible="True"/>
+                                <field name="tax_line_id" string="Tax"/>
+                                <field name="name" string="Withholding Number" required="1"/>
+                                <field name="amount_currency" readonly="0" required="1" string="Amount" sum="Total"/>
+                            </tree>
+                        </field>
+                    </page>
+                </notebook>
             </group>
         </field>
     </record>
