[FIX] project: fix sharing milestone search more issue
Steps:
- Install project app.
- Share a project with allow milestone on.
- Open project sharing task from.
- Click on Search more botton of milestone field.
- Click on view tasks button of Search more tree
dialog.

Issue:
- Backend task kanban view opens with unusual
charactoristics like progress bar display purple
Add stage button display etc.

Casue:
- Search more on milestone field open backend milestone
list view with view tasks button which open back-end
task kanban view.

Fix:
- Hide `View Tasks` button for project sharing milestone
field.

Note: Add this context in blockby page FW port.

task-3764782

--- a/addons/project/views/project_milestone_views.xml
+++ b/addons/project/views/project_milestone_views.xml
@@ -56,7 +56,7 @@
                         title="View Tasks"
                         string="View Tasks"
                         class="btn btn-link float-end"
-                        invisible="task_count == 0"
+                        invisible="task_count == 0 or context.get('is_sharing_milestone_field')"
                         groups="project.group_project_milestone"/>
             </tree>
         </field>
