[IMP] point_of_sales : move notification display notifications from bottom right, instead of the top
tasks id : 3763034

--- a/addons/point_of_sale/static/src/scss/pos.scss
+++ b/addons/point_of_sale/static/src/scss/pos.scss
@@ -161,3 +161,11 @@ button {
 .pos .button.validation.with-more-button {
     height: calc(var(--btn-height-size) * 2);
 }
+
+.o_notification_manager {
+    bottom: 0;
+    top: auto;
+    display:flex;
+    justify-content: flex-end;
+    flex-direction: column;
+}
