--- a/addons/mrp/report/mrp_workorder_templates.xml
+++ b/addons/mrp/report/mrp_workorder_templates.xml
@@ -8,11 +8,11 @@
                     <div class="oe_structure"/>
                     <div class="row">
                         <div class="col-7">
-                            <h2><span t-field="o.name">Laptop model X</span></h2>
+                            <h2><span t-field="o.production_id.name">Laptop model X</span></h2>
                         </div>
                         <div class="col-5">
                             <span class="text-end">
-                                <span t-field="o.name" t-options="{'widget': 'barcode', 'width': 600, 'height': 100, 'img_style': 'width:350px;height:60px'}">12345678901</span>
+                                <span t-field="o.production_id.name" t-options="{'widget': 'barcode', 'width': 600, 'height': 100, 'img_style': 'width:350px;height:60px'}">12345678901</span>
                             </span>
                         </div>
                     </div>
