fix: remove breakpoint

--- a/addons/mrp/views/mrp_production_views.xml
+++ b/addons/mrp/views/mrp_production_views.xml
@@ -655,7 +655,7 @@
         </record>
 
         <record id="mrp_production_action" model="ir.actions.act_window">
-            <field name="name">Manufacturing Orders Kinho</field>
+            <field name="name">Manufacturing Orders</field>
             <field name="res_model">mrp.production</field>
             <field name="view_mode">tree,kanban,form,calendar,pivot,graph,activity</field>
             <field name="view_id" eval="False"/>
