[IMP] website_forum: improve layout when last post option is selected
During the revamp of the forum, we had not taken into account a revamp
of the last post option as it had been removed.

It has been brought back in https://github.com/odoo/odoo/pull/146121
and this commit improves the card's layout when this option is selected.

task-3684705
part of task-3558730

--- a/addons/website_forum/static/src/scss/website_forum.scss
+++ b/addons/website_forum/static/src/scss/website_forum.scss
@@ -35,6 +35,10 @@ $-forum-sidebar-width: map-get($container-max-widths, sm) / 2;
         }
     }
 
+    .o_wforum_latest_post {
+        --o-avatar-height: #{$font-size-base};
+    }
+
     .o_wforum_content_wrapper {
         @include media-breakpoint-up(xxl) {
             margin-left: -$-forum-sidebar-width;
