--- a/addons/portal/static/src/scss/portal.scss
+++ b/addons/portal/static/src/scss/portal.scss
@@ -387,6 +387,7 @@ img, .media_iframe_video, .o_image {
     .o_portal_chatter_composer_body  {
         textarea {
             border: 0;
+            resize: vertical !important;
         }
         > div {
             border: 1px solid var(--o-border-color);
