[IMP] web: improve sample data's visibility
By removing the opacity on the sample data, the sample data is more
visible. We now only use the radial gradient on `.o_view_nocontent` as 
an overlay.

However, active buttons in the `graphView` have a higher `z-index` than 
the overlay, so it was necessary to increase the z-index of 
`.o_view_nocontent` in the `graphView`.


task-3751582

--- a/addons/web/static/src/views/graph/graph_view.scss
+++ b/addons/web/static/src/views/graph/graph_view.scss
@@ -1,6 +1,7 @@
 // ------- Graph renderer -------
 .o_graph_view {
     --ControlPanel-border-bottom: none;
+    --o-view-nocontent-zindex: 3;
 
     .o_graph_renderer canvas {
         background-color: $o-view-background-color;
