--- a/addons/hr_holidays/views/hr_holidays_views.xml
+++ b/addons/hr_holidays/views/hr_holidays_views.xml
@@ -79,7 +79,7 @@
         id="menu_hr_holidays_summary_all"
         name="by Type"
         parent="menu_hr_holidays_report"
-        action="act_hr_employee_holiday_type"
+        action="action_hr_leave_report"
         sequence="3"/>
 
     <menuitem
