[IMP] web, board: normalize the UI app icons implementation
Prior to this commit, the style related to the UI app icons was defined
in each module, which creates duplicated code.
To avoid that, this commit normalizes the implementation of these icons.

Only one class need to be defined:
- `o_ui_app_icon` should be defined on the svg.

task-3884720

Part-of: odoo/odoo#163328
Related: odoo/enterprise#61451
Signed-off-by: Vincent Schippefilt (vsc) <vsc@odoo.com>

--- a/addons/web/static/src/scss/ui.scss
+++ b/addons/web/static/src/scss/ui.scss
@@ -183,3 +183,11 @@ span.o_force_ltr {
         }
     }
 }
+
+.o_ui_app_icon {
+    width: var(--oi-font-size, 1em);
+
+    :not(:hover) > & {
+        --oi-color: currentColor;
+    }
+ }
