[IMP] website_forum: implement microdata for enhanced search results
This commit adds structured data in the form of a JSON-LD object to
facilitate rich search engine results. Now, each question with a valid
answer or suggested answers in the forum will be eligible for enhanced
display in search engine results.

The performance test is slightly adapted because of _related_posts in
[1].

[1]: https://github.com/odoo/odoo/commit/2bbbe696ef9688971b9d3be32a92a954f31a6816

task-3858663

Courtesy of @Sumeeshsree for his insight regarding this task.

X-original-commit: 0d6cb772053d2f7aafc88692f6da96cdfa4dd74e
Part-of: odoo/odoo#170797
Signed-off-by: Thibault Delavallee (tde) <tde@openerp.com>
Signed-off-by: Serge Bayet (seba) <seba@odoo.com>

--- a/addons/website_forum/views/forum_forum_templates_layout.xml
+++ b/addons/website_forum/views/forum_forum_templates_layout.xml
@@ -13,6 +13,9 @@
     <xpath expr="//div[@id='wrapwrap']" position="attributes">
         <attribute name="t-att-data-forum_id">forum and forum.id</attribute>
     </xpath>
+    <xpath expr="//body" position="inside">
+        <script t-if="seo_microdata" type="application/ld+json" t-out="seo_microdata"></script>
+    </xpath>
 </template>
 
 <!-- PAGE INDEX -->
