[IMP] hr_holidays: improve time off types with public holiday inclusion
This PR enhances the functionality of time off types by introducing boolean
fields that determine whether public holidays should be counted in the leave
duration when applying for leaves.

task-3896017

closes odoo/odoo#165093

Signed-off-by: Yannick Tivisse (yti) <yti@odoo.com>

--- a/addons/hr_holidays/views/hr_leave_type_views.xml
+++ b/addons/hr_holidays/views/hr_leave_type_views.xml
@@ -77,6 +77,7 @@
                                 placeholder="Nobody will be notified"
                                 invisible="leave_validation_type in ['no_validation', 'manager'] and (requires_allocation == 'no' or allocation_validation_type not in ['hr', 'both'])"/>
                             <field name="request_unit"/>
+                            <field name="include_public_holidays_in_duration"/>
                             <field name="show_on_dashboard"/>
                             <field name="support_document" string="Allow To Attach Supporting Document" />
                             <field name="time_type" required="1"/>
