[REF] base,l10n_es_edi_facturae: manage all country iso code in base
More and more localization modules are in need to the Alpha-3 or Numeric
ISO 3166 codes, using different implementations.

We can instead manage everything in `base` directly, byt also providing
the value as a quick search key.

It is implemented by doing a mapping in Python instead of creating a new
column in db for multiple small reasons:
* Reduce memory footprint
* Keep only one unique constraint
* If it makes sense to use an index, keep only that one index
* Be sure everything is in sync
* No need to prefetch the data if we are not going to read it

--- a/odoo/addons/base/views/res_country_views.xml
+++ b/odoo/addons/base/views/res_country_views.xml
@@ -29,6 +29,8 @@
                                 <field name="name"/>
                                 <field name="currency_id"/>
                                 <field name="code"/>
+                                <field name="iso_alpha3" groups="base.group_no_one"/>
+                                <field name="iso_num" groups="base.group_no_one"/>
                             </group>
                             <group name="phone_vat_settings">
                                 <field name="phone_code" options="{'format': false}"/>
@@ -67,7 +69,12 @@
             <field name="model">res.country</field>
             <field name="arch" type="xml">
                 <search string="Countries">
-                    <field name="name" filter_domain="['|', ('name', 'ilike', self), ('code', 'ilike', self)]"/>
+                    <field name="name" filter_domain="[
+                        '|', ('name', 'ilike', self),
+                        '|', ('code', '=ilike', self),
+                        '|', ('iso_alpha3', '=ilike', self),
+                             ('iso_num', '=', self),
+                    ]"/>
                     <field name="phone_code"/>
                 </search>
             </field>
