[IMP] account,*: merge audit trail
*: account_audit_trail, l10n_dk, l10n_dk_audit_trail, l10n_in, base

This commit merges account_audit_trail to account and adds improvements
on top of it:

- improved the empty screen of audit trail menu message
- added some additional filters in search for audit trail view

task-id: 3952457

--- a/addons/account/views/res_config_settings_views.xml
+++ b/addons/account/views/res_config_settings_views.xml
@@ -385,6 +385,11 @@
                                 <field name="quick_edit_mode" placeholder="Disabled"/>
                             </setting>
                         </block>
+                        <block title="Audit Trail" name="audit_trail_setting_container">
+                            <setting string="Audit Trail" company_dependent="1" help="Activate Audit Trail">
+                                <field name="check_account_audit_trail"/>
+                            </setting>
+                        </block>
                     </app>
                 </xpath>
             </field>
